# llm-copilot

./: .gitignore  Cargo.toml  README.md  llm-copilot.el
src/: cli.rs  main.rs  model.rs  prompts.rs  repository.rs  server.rs  utils.rs
src/prompts/: emacs.txt  fix.txt  generation.txt
