[package]
name = "llm-copilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
llm = { git = "https://github.com/rustformers/llm.git", branch = "main"}
clap = { version = "4.2.7", features = ["derive"] }
hyper = { version = "0.14.26", features = ["full"] }
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
git2 = "0.17.1"
dirs = "5.0.1"
log = "0.4.18"
env_logger = "0.10.0"
